# bird_diversity

./: LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: testsuite.yaml
data/: bird_census.csv  foliage_density.csv
notebooks/: bird_diversity_paper.ipynb
src/bird_diversity/: __init__.py  data_io.py  entropy.py  plotting.py
tests/: test_data_io.py  test_entropy.py
