[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bird_diversity"
version = "0.0.0"
description ="Bird Diversity experiment example"
dependencies = [
    "numpy",
    "pytest",
    "pytest-cov"
]

# Optional upgrades beyond the default ruff rules
# [tool.ruff.lint]
# select = [
    # "E", # pycodestyle: detect deviations from PEP8 rules
    # "W", # pycodestyle warnings: detect deviations from PEP8 suggestions
    # "F", # Pyflakes: detect code errors, potential bugs
    # "B", # flake8-bugbear: detect antipatterns that can lead to bugs
    # "A", # flake8-builtins: detect overloading python builtins
    # "N", # pep8-naming: detect deviations from PEP naming conventions
    # "I", # isort: better import organization
    # "D", # pydocstyle: check docstrings
    # "C4", # flake8-comprehensions: check for code simplifications with comprehensions
    # "SIM", # flake8-simplify: check for code simplifications
    # "UP", # pyupgrade: check for syntax improvments in new python versions
    # "C90", # McCabe complexity
# ]